WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269756
[WebGPU] GPU process crashes when Metal debug validation is enabled and
https://webgpu.github.io/webgpu-samples/samples/particles
is opened
https://bugs.webkit.org/show_bug.cgi?id=269756
Summary
[WebGPU] GPU process crashes when Metal debug validation is enabled and https...
Mike Wyrzykowski
Reported
2024-02-19 14:40:50 PST
[WebGPU] GPU process crashes when Metal debug validation is enabled and
https://webgpu.github.io/webgpu-samples/samples/particles
is opened
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-19 14:41:06 PST
<
rdar://problem/123269255
>
Mike Wyrzykowski
Comment 2
2024-02-19 16:05:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24788
EWS
Comment 3
2024-02-19 23:44:18 PST
Committed
275026@main
(de8e668fedfd): <
https://commits.webkit.org/275026@main
> Reviewed commits have been landed. Closing PR #24788 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug