Cherry-pick de8e668fedfd. rdar://123269255

[WebGPU] GPU process crashes when Metal debug validation is enabled and https://webgpu.github.io/webgpu-samples/samples/particles is opened (269756)
    https://bugs.webkit.org/show_bug.cgi?id=269756
    <radar://123269255>

    Reviewed by Dan Glastonbury.

    Array lengths should refrence the webBinding and not the generated metal binding.
    * Source/WebGPU/WebGPU/RenderPipeline.mm:
    (WebGPU::Device::addPipelineLayouts):

    Canonical link: https://commits.webkit.org/275026@main

Identifier: 273664.1306@safari-7619.1.5-branch